Fix top-bar vertical alignment

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -62,7 +62,7 @@ body {
 	width: 25px;
 	height: 25px;
 	position: relative;
-	padding-top: 25px;
+	top: 11px;
 	float: left;
 }
 
@@ -79,8 +79,8 @@ body {
 
 #top-bar .container.user-panel .username {
 	display: inline-block;
-	margin-top: 18px;
 	padding-left: 5px;
+	line-height: 50px;
 }
 
 #top-bar .container.create-crowd {
@@ -91,9 +91,8 @@ body {
 	color: #81bb62;
 	font-size: 25px;
 	font-weight: bold;
-	position: relative;
-	top: 9px;
 	text-shadow: 0 0 5px #456f23;
+	line-height: 50px;
 }
 
 #top-bar .container.create-crowd .crowd-text {
@@ -101,8 +100,7 @@ body {
 	margin-left: 2px;
 	display: inline-block;
 	font-weight: bold;
-	position: relative;
-	top: 8px;
+	line-height: 50px;
 }
 
 #body-wrapper {
